<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_State_Transport" Id="{f80637d5-61cf-43c9-8875-959b6a24e41b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_State_Transport :
(
    IDLE,
    INIT,
    WORK

);
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>